--- a/index.html
+++ b/index.html
@@ -1214,10 +1214,6 @@
                     <div class="project-tags">
                         <span class="tag">SQL</span>
                         <span class="tag">Pandas</span>
-                        <span class="tag">FastAPI</span>
-                        <span class="tag">Streamlit</span>
-                        <span class="tag">Joblib</span>
-                        <span class="tag">Docker</span>
                     </div>
                     <a href="https://github.com/taylorwanyama/Model-Deployment-" class="project-link">View Details <i class="fas fa-arrow-right"></i></a>
                 </div>
@@ -1448,6 +1444,20 @@
                     <div class="skill-item">
                         <i class="fab fa-docker"></i>
                         <span>Docker</span>
+                    </div>
+                </div>
+            </div>
+        
+        <div class="skill-category">
+                <h3><i class="fas fa-book"></i> Documentation & Versioning</h3>
+                <div class="skills-list">
+                    <div class="skill-item">
+                        <i class="fab fa-git-alt"></i>
+                        <span>Git</span>
+                    </div>
+                    <div class="skill-item">
+                        <i class="fab fa-github"></i>
+                        <span>GitHub</span>
                     </div>
                 </div>
             </div>
