--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 5px 25px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s, box-shadow 0.3s;
+            transition: transform 0.3s, box-shadow 0.Sec3s;
             border: 1px solid var(--border-color);
         }
 
@@ -1231,7 +1231,7 @@
                         <span class="edu-date">Sep 2021 – May 2025</span>
                     </div>
                     <p class="edu-institution"><i class="fas fa-university"></i> Jomo Kenyatta University of Agriculture and Technology (JKUAT)</p>
-                    <p class="edu-grade"><strong>Grade:</strong> Second Class Upper Division</p>
+                    <p class="edu-grade"><strong>Grade:</strong> Second Class Honours Upper Division</p>
                     
                 </div>
             </div>
